# playlist-scraper-rs

./: Cargo.toml  README.md
src/: main.rs  yt_downloader.rs
