[package]
name = "playlist_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
dotenv = "0.15.0"
youtube_dl = "0.8.0"
chrono = "0.4.23"
actix-web = "4"
actix-files = "0.6.2"